implements bird launch trajectory